# ychat

./: CHANGES  CONF.cpp  CONF.h  HTML.cpp  HTML.h  Makefile  Makefile.in  NEWS  README  README.txt  RELEASES  SHORTDESC  SNAPSHOT  SOCK.h  TODO  TOOL.cpp  VERSION  aclocal.m4  base.cpp  base.h  chat.cpp  chat.h  cmnd.cpp  cmnd.h  conf.cpp  conf.h  conf.txt  configure  configure.in  cont.cpp  cont.h  data.h  glob.h  hmap.cpp  hmap.h  html.cpp  html.h  incl.h  lang.cpp  lang.h  (+43 more)
0.2.1/: HTDOCS.PL  INDEX.PL  config.pm
0.2.2/: LIESMICH.txt  UPDATES.txt  htdocs.pl  index.pl  push.pl
0.2.3/: LIESMICH.txt  config.pm  htdocs.pl
0.2.4a/: config.pm  help_html  htdocs.pl  index.pl  main.pl  main2.pl  online.pl
0.2.4c/: LIESMICH.txt  config.pm  main.pl  main2.pl
0.2.5a2/: online.pl  push.pl
0.2.6a/: TODO.txt  UPDATES.txt  config.pm  help.sno  htdocs.pl  main2.pl
0.4.0a/: INSTALL.txt  UPDATES.txt  config.pm  htdocs.pl
0.4.1/: LIESMICH.txt  colors.sno  htdocs.pl  main.pl
0.4.2/: UPDATES.txt  htdocs.pl  index.pl  push.pl  setup.sh
0.4.3a/: UPDATES.txt  htdocs.pl  index.pl  main.pl  online.pl
0.4.4a3/: UPDATES.txt  config.pm  help.sno  index.pl  main.pl  push.pl  setup.sh
0.4.5a/: SETUP.txt  TODO.txt  UPDATES.txt  index.pl  main.pl  push.pl
0.4.6/: SETUP.txt  config.pm  htdocs.pl  input.pl  main.pl
0.4.7a2/: TODO.txt  UPDATES.txt  htdocs.pl  input.pl  push.pl
0.4.8a2/: SETUP.txt  TODO.txt  config.pm  htdocs.pl  index.pl  main.pl  main2.pl
0.4.9/: SETUP.txt  TODO.txt  UPDATES.txt  help.sno  htdocs.pl  main.pl  main2.pl  push.pl  stat.pl
0.6.0/: UPDATES.txt  config.pm  help.sno  htdocs.pl  index.pl  online.pl  push.pl  setup.sh
0.6.1/: SETUP.txt  chatiq.sno  config.pm  help.sno  htdocs.pl  index.pl  main.pl  main2.pl  push.pl  setup.sh
0.6.2/: CREDITS.txt  README.txt  chatiq.sno  config.pm  input.pl  online.pl
0.7.1/: htdocs.pm  main1.pm  start.pm  ychatd.pl
0.8/: Makefile.in  TODO
0.8.0/: INSTALL.txt  config.pm  setup.sh
0.8.1/: setup.sh  ychatd.pl
CVS/: Entries  Root
cmnd/: yc_getrusage.cpp  yc_test.cpp  yc_version.cpp
docs/: header.txt
etc/: ychat.conf  yhttpd.conf
html/: colors.html  demo.html  frameset.html  help.html  index.html  input.html  loggedin.html  notfound.html  online.html  options.html  register.html  stream.html  style.css  test.cgi  urlredirect.html
lang/: de  en
log/: system_log
scripts/: README  astyle.sh  buildnr.pl  config.pl  config.sh  makedist.sh  makeyhttpd.pl  screen.sh  setglobvals.pl  stats.pl  version.sh
src/: Makefile.in  base.cpp  base.h  chat.cpp  chat.h  conf.cpp  conf.h  config.cache  config.h.in  configure  configure.ac  cont.cpp  cont.h  glob.h  hmap.cpp  hmap.h  html.cpp  html.h  incl.h  lang.cpp  lang.h  logd.cpp  logd.h  main.cpp  modl.cpp  modl.h  msgs.h  mutx.cpp  mutx.h  name.cpp  name.h  pool.cpp  pool.h  reqp.cpp  reqp.h  room.cpp  room.h  s_chat.cpp  s_chat.h  s_conf.cpp  (+29 more)
yChat/: ychat-0.1.tar.bz2  ychat-0.2.tar.bz2  ychat-0.3.tar.bz2  ychat-0.4.tar.bz2  ychat-0.5.0.tar.bz2  ychat-0.5.1.tar.bz2  ychat-0.5.2.tar.bz2  ychat-0.5.3.tar.bz2  ychat-0.5.4.tar.bz2  ychat-0.5.5.tar.bz2  ychat-0.6.0.tar.bz2  ychat-0.7.0.tar.bz2  ychat-0.7.1.tar.bz2  ychat-0.7.2.tar.bz2  ychat-0.7.3.tar.bz2  ychat-0.7.4.1.tar.bz2  ychat-0.7.5.tar.bz2  ychat-0.7.6.tar.bz2  ychat-0.7.7.0.tar.bz2  ychat-0.7.7.1.tar.bz2  ychat-0.7.8.tar.bz2  ychat-0.7.9.0.tar.bz2  ychat-0.7.9.1.tar.bz2  ychat-0.7.9.2.tar.bz2  ychat-0.7.9.3.tar.bz2  ychat-0.7.9.4.tar.bz2  ychat-0.7.9.5.tar.bz2  ychat-0.8.0.tar.bz2  ychat-0.8.1.tar.bz2  ychat-0.8.2.tar.bz2
yChat-Perl-CGI/: THIS_IS_LEGACY_SOFTWARE_AND_MIGHT_BE_BROKEN.txt
ychat-0.1/: CHAT.cpp  MUTX.h  SOCK.cpp  TOOL.h  base.h  chat.h  cont.h  html.h  msgs.h  reqp.cpp  reqp.h  sock.h  thrd.cpp  user.h
ychat-0.2/: CHAT.h  MUTX.cpp  (+13 more)
ychat-0.6/: base.cpp  base.h  chat.h  conf.h  configure.in  cont.cpp  cont.h  dir.cpp  dir.h  glob.h  hmap.h  html.cpp  lang.cpp  logd.cpp  mcon.cpp  mcon.h  menu.cpp  menu.h  mman.cpp  mman.h  modl.cpp  mutx.h  name.cpp  quickstart.sh  room.h  s_mman.cpp  s_mutx.h  s_ncur.cpp  s_ncur.h  s_sman.cpp  s_sman.h  s_sock.h  sman.cpp  sman.h  sock.cpp  thrd.cpp  thrd.h  user.cpp  user.h
ychat-0.6/html/: help.html  input.html
ychat-0.6/lang/: en
ychat-0.6/mods/: compile.sh
ychat-0.6/mods/commands/: yc_col.cpp  yc_q.cpp  yc_version.cpp
ychat/src/: Makefile  build.h  config.h  configure.ac  glob.h  html.h  modl.h  reqp.cpp  reqp.h
ychat/src/chat/: base.tmpl  room.cpp
ychat/src/contrib/crypt/: md5.cpp  md5.h
ychat/src/contrib/xml/: tinyxmlparser.cpp
ychat/src/data/: README
ychat/src/maps/: mtools.h  mtools.tmpl
ychat/src/memb/: tupel.tmpl
ychat/src/mods/: Makefile.mods.in
ychat/src/mods/commands/: yc_all.cpp  yc_ban.cpp  yc_banned.cpp  yc_col.cpp  yc_compopt.cpp  yc_debug.cpp  yc_exec.cpp  yc_gag.cpp  yc_getrusage.cpp  yc_ko.cpp
ychat/src/mods/html/: yc_loggedin.cpp
ychat/src/sock/: context.cpp  sock.h
(+926 files in other folders)
